@@ -45,7 +45,7 @@ function equip_sets(swap_type,ts,...)
     local var_inps = {...}
     local val1 = var_inps[1]
     local val2 = var_inps[2]
-    table.reassign(_global,command_registry[ts] or {cast_delay = 0,midaction = false,pet_midaction = false,cancel_spell = false})
+    table.reassign(_global,command_registry[ts] or {cast_delay = 0,cancel_spell = false})
     _global.current_event = tostring(swap_type)
     
     windower.debug(tostring(swap_type)..' enter')
@@ -85,11 +85,6 @@ function equip_sets(swap_type,ts,...)
         if debugging.general then
             windower.add_to_chat(8,'val1 error')
         end
-    end
-    
-    if type(swap_type) == 'string' and swap_type == 'pet_midcast' then
-        _global.pet_midaction = true
-        command_registry[ts].timestamp = os.time()
     end
 
     
@@ -254,6 +249,7 @@ function equip_sets_exit(swap_type,ts,val1)
             command_registry[ts] = nil
             return true
         elseif swap_type == 'midcast' and _settings.demo_mode then
+            command_registry[ts].midaction = false
             equip_sets('aftercast',ts,val1)
         elseif swap_type == 'aftercast' then
             if ts then
